Pass QApplication::desktop() as the parent widget to KonqOperations instead of view() or 'this'.

This fixes a crash that can occur if the parent widget is deleted while
KonqOperations is showing a dialog box.

It also fixes a potential crash if view() returns 0.

BUG: 204844
BUG: 206343

svn path=/trunk/KDE/kdebase/apps/; revision=1061675